change the bg color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style type="text/css">
 /*<![CDATA[*/
 body { 
-background-image: url(bg/dark_scratch.jpg); 
+background-image: url(bg/grey_scratch.jpg); 
 background-repeat:repeat;
 background-color:#ccc;
 background-position:top center;
