Work on the about page

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ loading_text: "loading tweets..."
 </head>
 <body>
 <div class="container">
-<h1>John Doe</h1>
-<div class="title">Web Designer &amp; Illustrator</div>
+<h1>Daniel Chcouri</h1>
+<div class="title">Web Developer</div>
 <div style="height: 500px; width: 980px;" class="shadow">
 <div id="one" class="accordion">
 <ol>
@@ -78,15 +78,13 @@ loading_text: "loading tweets..."
 <div>
 <div class="figure">
 <h3>Welcome</h3>
-<div class="intro">Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris semper pharetra vitae a urna. Dolor sit amet sem.</div>		
+<div class="intro">Hi, I'm Daniel. Computer programming is my core competence, my work and one of the things I enjoy the most doing. In my work I strive to keep the delicate balance between stability and agility. I'm always eager to expand my horizons with new chalenges and technologies.</div>
 <div class="content-left">
 <!-- SLIDER GALLERY - ADD YOUR PHOTOS HERE -->
 <div id="sliderbg">
 <div id="slider-wrapper">
 <div id="slider" class="nivoSlider">
-<img src="images/slider1.jpg" alt="" />
-<img src="images/slider2.jpg" alt="" />
-<img src="images/slider3.jpg" alt="" />
+<img src="images/august-penguin.png" alt="" width="315" height="224" />
 </div>
 </div>
 <script type="text/javascript" src="nivo/jquery.nivo.slider.js"></script>
@@ -100,10 +98,9 @@ $('#slider').nivoSlider();
 </div>
 </div>
 <div class="content-right">
-<h4>Sed Vitae Lectus</h4>
-<p>Dolor sit amet sem commodo auguer uma porttitor interdum. Crasater om dolor neque, at rutrum turpikory aenean adipiscing dui velore quamery dictum condimentumy. Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis ornare sollicitudin. Sed vitae lectus elementum mauris semper pharetra vitae a urna.</p>
-<p>Dolor sit amet sem commodo auguer uma porttitor interdum. Crasater om dolor neque, at rutrum.<br/>
-<img src="images/bullet.png" alt="" height="9" width="12" /> <a href="#" title="This Is  a Tool Tip" class="link">visit site</a> &raquo;</p>
+<h4>My current project</h4>
+<p>I currently work as the head web developer for an ambitious startup named <a href="http://www.razoss.com/" title="Razoss">Razoss</a> that aims to develop a new platform for services that runs above any modern web browser.</p>
+<p>The main techonlogies I use in my day to day work these days are: Python, Javascript, NodeJS and Google App Engine.<br/>
 </div>
 </div>
 </div>
@@ -387,7 +384,7 @@ $('blockquote').quovolver();
 var d = new Date()
 document.write(d.getFullYear())
 //]]>
-</script>: John Doe
+</script>: Daniel Chcouri
 </div>
 </div>
 </div>
