Work on the resume page

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@ $('#slider').nivoSlider();
 <div>
 <div class="figure">
 <h3>My Resume</h3>
-<div class="intro">Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris semper pharetra vitae a urna. Dolor sit amet sem.</div>
+<div class="intro">Started at 2008, my professional career covers many fields: Advanced Web Applications, Cloud Services (Amazon/Google), Social APIs (Facebook, Twitter), Widgets development, Web sites development, LAMP servers installations and configurations (both VPSs and locale), and more...
+    </div>
 <!-- TECHNICAL SKILLS PAGE STARTS -->
 <div class="coda-slider-wrapper">
 <div class="coda-slider preload" id="coda-slider-1">
@@ -121,8 +122,7 @@ $('#slider').nivoSlider();
 <h2 class="title">skills</h2>
 <div class="skills_left_text">
 <h4>Technical Skills</h4>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla, commodo.</p>
+<p>The Vim editor and the Unix command line are <a title="See a lecture I gave about my working environment in an annual Linux convention at Israel">the main tools I work with</a>. I have extensive experience in all aspects of web-development (both server-side and client), high commitment to standards, and code history transparency (with git).</p>
 <p><img src="images/bullet.png" alt="" width="12" height="9" /> Morbi vel enim dignissim massa dignissim.
 <br/>
 <img src="images/bullet.png" alt="" width="12" height="9" /> Commodo vitae quis tellus.
