More work on the resume section

--- a/index.html
+++ b/index.html
@@ -123,28 +123,24 @@ $('#slider').nivoSlider();
 <div class="skills_left_text">
 <h4>Technical Skills</h4>
 <p>The Vim editor and the Unix command line are <a title="See a lecture I gave about my working environment in an annual Linux convention at Israel">the main tools I work with</a>. I have extensive experience in all aspects of web-development (both server-side and client), high commitment to standards, and code history transparency (with git).</p>
-<p><img src="images/bullet.png" alt="" width="12" height="9" /> Morbi vel enim dignissim massa dignissim.
+<p><img src="images/bullet.png" alt="" width="12" height="9" /> Server side: Javascript (nodeJS), Python
 <br/>
-<img src="images/bullet.png" alt="" width="12" height="9" /> Commodo vitae quis tellus.
+<img src="images/bullet.png" alt="" width="12" height="9" /> Client side: HTML5, CSS3, Javascript (jQuery)
 <br />
-<img src="images/bullet.png" alt="" width="12" height="9" /> Nunc non mollis nulla adipiscing elit.</p>
+<img src="images/bullet.png" alt="" width="12" height="9" /> Development Tools: Git, VIM, Bash, Gimp</p>
 </div>
 
 <div class="skills_right_text">
-<span class="skill">Html/Css</span>
-<img src="images/5star.png" alt="" class="star" width="94" height="20" />
+<span class="skill">Download My CV</span>
 <div class="clear2"></div>
-12 years - Porttitor interdum.
-<div class="clear3"></div>
-<span class="skill">Graphic Design</span>
-<img src="images/4star.png" alt="" class="star" width="94" height="20" />
-<div class="clear2"></div>
-12 years - Crasater om dolor neque.
-<div class="clear3"></div>
-<span class="skill">Photoshop</span>
-<img src="images/5star.png" alt="" class="star" width="94" height="20"/>
-<div class="clear2"></div>
-12 years - Porttitor interdum.
+<p>You can also browse my working experience online by clicking the arrows to the left and the right</p>
+<p><img src="images/bullet.png" alt="" width="12" height="9" /> DOC
+<br/>
+<img src="images/bullet.png" alt="" width="12" height="9" /> PDF
+<br />
+<img src="images/bullet.png" alt="" width="12" height="9" /> ODT</p>
+<br />
+<i>last update: 1.1.2011</i>
 </div>
 </div>
 </div>
