Fix typos on the about section and add more content on "My current project"

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ loading_text: "loading tweets..."
 <div>
 <div class="figure">
 <h3>Welcome</h3>
-<div class="intro">Hi, I'm Daniel. Computer programming is my core competence, my work and one of the things I enjoy the most doing. In my work I strive to keep the delicate balance between stability and agility. I'm always eager to expand my horizons with new chalenges and technologies.</div>
+<div class="intro">Hi, I'm Daniel. Computer programming is my core competence, my work and one of the things I enjoy the most doing. In my work I strive to keep the delicate balance between stability and agility. I'm always eager to expand my horizons with new challenges and technologies.</div>
 <div class="content-left">
 <!-- SLIDER GALLERY - ADD YOUR PHOTOS HERE -->
 <div id="sliderbg">
@@ -100,7 +100,7 @@ $('#slider').nivoSlider();
 <div class="content-right">
 <h4>My current project</h4>
 <p>I currently work as the head web developer for an ambitious startup named <a href="http://www.razoss.com/" title="Razoss">Razoss</a> that aims to develop a new platform for services that runs above any modern web browser.</p>
-<p>The main techonlogies I use in my day to day work these days are: Python, Javascript, NodeJS and Google App Engine.<br/>
+<p>My job is to implement a web application with great user experience that let users to build custom bars that runs above the Razoss framework. The main technologies I use for this project are: Python over the Google App Engine cloud, Javascript, jQuery, NodeJS, HTML5 and CSS3. (Read more on the Resume section)<br/>
 </div>
 </div>
 </div>
