More content to the Resume section

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@ $('#slider').nivoSlider();
 <span class="skill">Download My CV</span>
 <div class="clear2"></div>
 <p>You can also browse my working experience online by clicking the arrows to the left and the right</p>
-<p><img src="images/bullet.png" alt="" width="12" height="9" /> DOC
+<p><a href="/cv/daniel-chcouri.doc"><img src="images/doc.png" alt="doc" width="12" height="9" /> DOC (MS Office)</a>
 <br/>
-<img src="images/bullet.png" alt="" width="12" height="9" /> PDF
+<a href="/cv/daniel-chcouri.pdf"><img src="images/pdf.png" alt="pdf" width="12" height="9" /> PDF (Acrobat Reader)</a>
 <br />
-<img src="images/bullet.png" alt="" width="12" height="9" /> ODT</p>
+<a href="/cv/daniel-chcouri.odt"><img src="images/odt.png" alt="odt" width="12" height="9" /> ODT (Open Office)</a></p>
 <br />
-<i>last update: 1.1.2011</i>
+<i>last update: 2011-07-19</i>
 </div>
 </div>
 </div>
@@ -151,25 +151,16 @@ $('#slider').nivoSlider();
 <div class="panel-wrapper">
 <h2 class="title">Panel 2</h2>
 <div class="skills_left_text">
-<h4>Education</h4>
-<p>Cing dui velore quamery dictum condimentumy. Lorem ipsum dolor sit amet, consectetur adipisc. Cing dui velore quamery dictum. Emi Phasellus congue auctor risuspon eget males.</p>
-<h5>Central St. Martins - London, U.K</h5>First Class B.A Honours in Graphic Design.
-<h5>LCP - London, U.K</h5>First Class B.A Honours in Graphic Design.
+<h4>Razoss <small style="float: right;">June 2010 - Current</small></h4>
+<p>Designed the architecture and implemented a user friendly extensible toolbars generator (like Wibiya/Conduit)</p>
+<h5>Technologies</h5>
+<p>python django facebook jquery google-app-engine browsers-plugins web-widgets git node.js lesscss</p>
 </div>
 <div class="skills_right_text">
-<h4>Awards</h4>
-<img src="images/bullet.png" alt=""  width="12" height="9" /> D&amp;AD - Best in creative art direction  - 2011
-<br/>
-<img src="images/bullet.png" alt=""  width="12" height="9" /> Top Prize - Design &amp; Art Direction - 2011
-<br/>
-<img src="images/bullet.png" alt=""  width="12" height="9" /> Best Award Ever - Creativity, design - 2010
-<div class="clear5"></div>
-<h4>Published</h4><p>
-<img src="images/bullet.png" alt=""  width="12" height="9" /> Computer Arts Magazine - Feb. 2011
-<br />
-<img src="images/bullet.png" alt="" width="12" height="9" /> Vintage by Angela Patchell - 2010
-<br/>
-<img src="images/bullet.png" alt=""  width="12" height="9" /> Computer Arts Magazine - June 2009</p>
+<h4>Main Achievements</h4>
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Working in Google App Engine cloud<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> The servers-side code designed to handle simple AJAX APIs, leaving to the client as much as possible<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Widgets development<br />
 </div>
 </div>
 </div>
@@ -180,47 +171,42 @@ $('#slider').nivoSlider();
 <div class="panel-wrapper">
 <h2 class="title">Panel 3</h2>
 <div class="skills_left_text">
-<h4>Clients</h4>
-<h5>Web Design</h5>
-<img src="images/bullet.png" alt="" height="9" width="12" /> Emi Phasellus Congue Auctor - <a href="#.html">visit site &raquo;</a>
-<br/>
-<img src="images/bullet.png" alt="" height="9" width="12" /> Praesent Facilisis Diam Nec  - <a href="#.html">visit site &raquo;</a>
-<div class="clear"></div>
-<h5>Illustration</h5>
-<img src="images/bullet.png" alt="" height="9" width="12" /> Praesent Facilisis Diam Nec - <a href="#.html">visit site &raquo;</a>
-<br/><img src="images/bullet.png" alt="" height="9" width="12" /> Nunc Non Mollis Nulla - <a href="#.html">visit site &raquo;</a>
-<div class="clear"></div>
-<h5>Graphic Design</h5>
-<img src="images/bullet.png" alt="" height="9" width="12" /> Emi Phasellus Congue - <a href="#.html">visit site &raquo;</a>
-<br/>
-<img src="images/bullet.png" alt="" height="9" width="12" /> Facilisis Diam Nec - <a href="#.html">visit site &raquo;</a>
+<h4>WhiteWeb <small style="float: right;">March 2009 - June 2010</small></h4>
+<p>Implementing and maintaining Babylon's translation/dictionary sites</p>
+<h5>Technologies</h5>
+<p>php python redis apache mysql bash gettext ajax jquery vim</p>
 </div>
 <div class="skills_right_text">
-<h4>Services</h4>
-<img src="images/bullet.png" alt="" height="9" width="12" /> Web Design<br/>
-<img src="images/bullet.png" alt="" height="9" width="12" /> Web Hosting &amp; Domain Registration<br/>
-<img src="images/bullet.png" alt=""  height="9" width="12" /> Graphics &amp; Illustration
-<div class="clear"></div>
-<!-- YOUR TESTIMONIALS -->
-<h4>Testimonials</h4>
-<script type="text/javascript" charset="utf-8">
- $(document).ready(function() {
-$('blockquote').quovolver();
- });
-</script>
-<blockquote>
-<p>" Ut eu consectetur nisi. Praesent facilisis diam nec sapien gravida non mattis justo imperdiet. Vestibulum nisl urna, euismod sit amet congue at, bibendum non risus. "<br/>
-<cite>Quote Author</cite></p>
-</blockquote>
-<blockquote>
-<p>" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu eros velit, non blandit ipsum. Donec pretium, nibh vitae tristique tempor, enim sem condimentum lacus, vel mattis mauris. "<br/>
-<cite>Quote Author</cite></p>
-</blockquote>
+<h4>Main Achievements</h4>
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Rebuilding Babylon's online translation and online dictionary websites: both for product improvements and SEO improvements. See http://translation.babylon.com and http://dictionary.babylon.com<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> System administration of LAMP VPSes using SSH (CentOS and Ubuntu)<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Developing JS based translation widget with different skins
+</div>
+</div>
+</div>
 <!-- PAGE 3 ENDS -->
+
+<!-- PAGE 4 STARTS -->
+<div class="panel">
+<div class="panel-wrapper">
+<h2 class="title">Panel 4</h2>
+<div class="skills_left_text">
+<h4>Convertonet <small style="float: right;">April 2008 - February 2009</small></h4>
+<p>Coding for the SEO Department</p>
+<h5>Technologies</h5>
+<p>php python redis apache mysql bash gettext ajax jquery vim</p>
+</div>
+<div class="skills_right_text">
+<h4>Main Achievements</h4>
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Process automation using GreaseMonkey based scripts<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Implementing SEO changes on Casino.Com and Mansion Casino sites<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Developing PHP-based tools in order to control and expand the peripheral SEO network of Mansion Team and Casino.Com sites<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Developing scripts which automatically installed hundreds of Wordpress sites on VPSes and routinely added content to them
 </div>
 </div>
-<!-- .coda-slider -->
 </div>
+<!-- PAGE 4 ENDS -->
+
 </div>
 </div></div></div>
 </li>
