--- a/index.html
+++ b/index.html
@@ -343,15 +343,15 @@ $('#slider').nivoSlider();
 <!-- GOOGLE MAP -->
 <div id="map"></div>
 <!-- CONTACT ICONS -->
-<img src="images/pencil.png" class="contact_icon" width="30" height="30" alt="address" /> <span class="contact">21, High St, Colchester, Essex, BN7 5NX</span>
+<img src="images/pencil.png" class="contact_icon" width="30" height="30" alt="address" /> <span class="contact">Rehovot, Israel</span>
 <br/>
-<img src="images/telephone.png" class="contact_icon" width="30" height="30" alt="telephone" /> <span class="contact">0234 678905</span>
+<img src="images/telephone.png" class="contact_icon" width="30" height="30" alt="telephone" /> <span class="contact">972-54-8836191</span>
 <br/>
-<img src="images/email.png" class="contact_icon" width="30" height="30" alt="email" /> <span class="contact"><a href="#" class="link" title="Email Me">info@mysite.com</a></span>
+<img src="images/email.png" class="contact_icon" width="30" height="30" alt="email" /> <span class="contact"><a href="mailto:333222@gmail.com" class="link" title="Email Me">333222@gmail.com</a></span>
 <br/>
-<img src="images/home.png" class="contact_icon" width="30" height="30" alt="home" /> <span class="contact"><a href="#" class="link" title="My Website">www.mysite.com</a></span>
+<img src="images/home.png" class="contact_icon" width="30" height="30" alt="home" /> <span class="contact"><a href="http://www.theosp.me/" class="link" title="My Website">theosp.me</a></span>
 <br/>
-<img src="images/vcard.png" class="contact_icon" width="30" height="30" alt="vcard" /> <span class="contact"><a href="#" class="link" title="Add Me To Your Contacts">vCard</a></span>
+<img src="images/vcard.png" class="contact_icon" width="30" height="30" alt="vcard" /> <span class="contact"><a href="/vcard/daniel-chcouri.vcf" class="link" title="Add Me To Your Contacts">vCard</a></span>
 </div>
 </div>
 </div>
@@ -418,8 +418,8 @@ $(this).stop().animate({ "opacity": 1 });
 <script type="text/javascript">
 $(function() {
 $("#map").googleMap({
-zoomLevel: 10,
-center: ' England',
+zoomLevel: 8,
+center: 'Israel',
 tooltip: 'false',
 image: 'false'})
 .load();
