--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<title>My V Card</title>
+<title>Daniel Chcouri</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
 /*<![CDATA[*/
@@ -74,7 +74,7 @@ loading_text: "loading tweets..."
 <div>
 <div class="figure">
 <h3>Welcome</h3>
-<div class="intro">Hi, I'm Daniel. Computer programming is my core competence, my work and one of the things I enjoy the most doing. In my work I strive to keep the delicate balance between stability and agility. I'm always eager to expand my horizons with new challenges and technologies.</div>
+<div class="intro">Hi, I'm Daniel. Computer programming is my core competency, my work and one of the things I most enjoy doing. In my work I strive to keep the delicate balance between stability and agility. I'm always eager to expand my horizons with new challenges and technologies.</div>
 <div class="content-left">
 <!-- SLIDER GALLERY - ADD YOUR PHOTOS HERE -->
 <div id="sliderbg">
@@ -96,7 +96,7 @@ $('#slider').nivoSlider();
 <div class="content-right">
 <h4>My current project</h4>
 <p>I currently work as the head web developer for an ambitious startup named <a href="http://www.razoss.com/" title="Razoss">Razoss</a> that aims to develop a new platform for services that runs above any modern web browser.</p>
-<p>My job is to implement a web application with great user experience that let users to build custom bars that runs above the Razoss framework. The main technologies I use for this project are: Python over the Google App Engine cloud, Javascript, jQuery, NodeJS, HTML5 and CSS3. (Read more on the Resume section)<br/>
+<p>My job is to implement a web application with great user experience that let users build custom bars that run above the Razoss framework. The main technologies I use for this project are: Python over the Google App Engine cloud, Javascript, jQuery, NodeJS, HTML5 and CSS3. (Read more on the Resume/CV section)<br/>
 </div>
 </div>
 </div>
@@ -104,7 +104,7 @@ $('#slider').nivoSlider();
 <!-- ABOUT PAGE ENDS -->
 <!-- RESUME PAGE STARTS -->
 <li>
-<h2><span>Resume</span></h2>
+<h2><span>Resume/CV</span></h2>
 <div>
 <div class="figure">
 <h3>My Resume</h3>
@@ -129,12 +129,14 @@ $('#slider').nivoSlider();
 <div class="skills_right_text">
 <span class="skill">Download My CV</span>
 <div class="clear2"></div>
-<p>You can also browse my working experience online by clicking the arrows to the left and the right</p>
+<p>You can also browse my working experience online using the arrows to the left and right</p>
 <p><a href="/cv/daniel-chcouri.doc"><img src="images/doc.png" alt="doc" width="12" height="9" /> DOC (MS Office)</a>
 <br/>
 <a href="/cv/daniel-chcouri.pdf"><img src="images/pdf.png" alt="pdf" width="12" height="9" /> PDF (Acrobat Reader)</a>
 <br />
-<a href="/cv/daniel-chcouri.odt"><img src="images/odt.png" alt="odt" width="12" height="9" /> ODT (Open Office)</a></p>
+<a href="/cv/daniel-chcouri.odt"><img src="images/odt.png" alt="odt" width="12" height="9" /> ODT (Open Office)</a>
+<br />
+<a href="http://www.linkedin.com/in/danielchcouri"><img src="images/linkedin.png" alt="linkedin" width="12" height="12" /> My Linkedin Profile</a></p>
 <br />
 <i>last update: 2011-07-19</i>
 </div>
@@ -207,147 +209,22 @@ $('#slider').nivoSlider();
 </div></div></div>
 </li>
 <!-- RESUME PAGE ENDS -->
-<!-- GALLERY PAGE STARTS -->
-<li>
-<h2><span>Portfolio</span></h2>
-<div>
-<div class="figure">
-<h3>Gallery</h3>
-<div class="intro">Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris semper pharetra vitae a urna. Dolor sit amet sem.</div>
-<!-- THUMBNAILS PAGE STARTS -->
-<div class="coda-slider-wrapper">
-<div class="coda-slider preload" id="coda-slider-2">
-<div class="panel">
-<div class="panel-wrapper">
-<h2 class="title">thumbs</h2>
-<div class="gal"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gal"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gal"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gal"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gal"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gallast"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gal"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gal"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gal"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gal"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gal"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-
-<div class="gallast"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/thumb.jpg" class="gal2" width="60" height="60" alt="" /></a></div>
-</div>
-</div>
-<!-- THUMBNAIL PAGE ENDS -->
-<!-- PAGE 2 STARTS -->
-<div class="panel">
-<div class="panel-wrapper">
-<h2 class="title">single</h2>
-<div class="left"><a href="images/large.jpg" rel="prettyPhoto"><img src="images/gallery.jpg" alt="" width="274" height="165" class="pic" /></a>
-</div>
-<div class="right_text">
-<h4>Featured Project</h4>
-<p>Cras luctus fringilla odio vel hendrerit. Cras pulvinar auctor sollicitudin. Sed lacus quam, sodales sit amet feugiat sit amet, viverra nec augue. Sed enim ipsum, malesuada quis blandit vel, posuere eget erat. Sed a arcu justo.</p>
-<img src="images/bullet.png" alt="" width="12" height="9" /> <a href="#" class="link">visit site</a> &raquo;
-</div>
-</div>
-</div>
-<!--  PAGE 2 ENDS -->
-<!-- PAGE 3 STARTS -->
-<div class="panel">
-<div class="panel-wrapper">
-<h2 class="title">double</h2>
-<div class="left"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/gallery.jpg" alt="" width="274" height="165" class="pic" /></a>
-</div>
-<div class="right"><a href="images/large.jpg" rel="prettyPhoto[pp_gal]"><img src="images/gallery.jpg" alt="" width="274" height="165" class="pic" /></a>
-</div>
-</div>
-<!-- PAGE 3 ENDS -->
-<!-- .coda-slider -->
-</div>
-</div>
-</div>
-</div>
-</div>
-</li>
-<!-- GALLERY ENDS -->
-<!-- SOCIAL PAGE STARTS -->
-<li>
-<h2><span>Social</span></h2>
-<div>
-<div class="figure">
-<h3>Social</h3>
-<div class="intro">Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris semper pharetra vitae a urna. Dolor sit amet sem.</div>		
-<div class="social-content-left">
-<span class="social"><a href="#" class="icon"><img src="social/twitter-logo-square.png" title="I Tweet - www.twitter.com/username" alt="Twitter" class="icon" border="0" width="56" height="56" />Twitter</a></span>
-<div class="clear4"></div>
-<span class="social"><a href="#" class="icon"><img src="social/facebook-logo-square.png" alt="Facebook" title="Fan Me - www.facebook.com/usernae" class="icon" border="0" width="56" height="56" />Facebook</a></span>
-<div class="clear4"></div>
-<span class="social"><a href="#" class="icon"><img src="social/linkedin-logo-square2.png" alt="Linked In" title="Let's Link Up - www.linkedin.com/username" class="icon" border="0" width="56" height="56" />Linked In</a></span>
-<div class="clear4"></div>
-<span class="social"><a href="#" class="icon"><img src="social/flickr-square.png" alt="Flickr"  title="Flickr - www.flickr.com/username" class="icon" border="0" width="56" height="56" />Flickr</a></span>
-</div>
-<div class="social-content-right">
-<span class="social"><a href="#" class="icon"><img src="social/deviantart-s.png" alt="DeviantArt" title="I'm a Deviant! - www.deviantart.com/username" class="icon" border="0" width="56" height="56" />DeviantArt</a></span>
-<div class="clear4"></div>
-<span class="social"><a href="#" class="icon"><img src="social/rss-cube.png" alt="RSS" title="Get My Feed - www.feedburner.com/username" class="icon" border="0" width="56" height="56" />My Feed</a></span>
-<div class="clear4"></div>
-<span class="social"><a href="#" class="icon"><img src="social/vimeo-s.png" alt="Vimeo" title="Watch My Videos - www.vimeo.com/username"  class="icon" border="0" width="56" height="56" />Vimeo</a></span>
-<div class="clear4"></div>
-<span class="social"><a href="#" class="icon"><img src="social/skype-s.png" alt="Skype" title="Skype Me" class="icon" border="0" width="56" height="56" />Skype</a></span>
-</div>
-<div class="content-right">
-<!-- TWITTER BOX -->
-<div class="tweet"></div>
-</div>
-</div>
-</div>
-</li>
-<!-- SOCIAL PAGE ENDS -->
 <!-- CONTACT PAGE STARTS -->
 <li>
 <h2><span>Contact</span></h2>
 <div>
 <div class="figure">
 <h3>Contact</h3>
-<div class="intro">Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris semper pharetra vitae a urna. Dolor sit amet sem.</div>		
+<div class="intro">You are welcome to contact me</div>
 <div class="content-left">
-<!-- CONTACT FORM -->
-<form method='post' action='contact/php/contact-send.php'>
-<p class="label">Name</p>
-<input id='form_name' type='text' name='name' />
-<p class="label">Email *</p>
-<input id='form_email' type='text' name='email' />
-<p class="label">Message *</p>
-<textarea id='form_message' rows='10' cols='10' name='message' ></textarea>
-<input id='form_submit' type='submit' name='submit' value='Submit' />
-<p class='hide' id='response'></p>
-<div class='hide'>
-<p class="label">Do not fill out this field</p>
-<input name='spam_check' type='text' value='' />
-</div>
-</form>
-</div>
-<div class="content-right">
-<!-- GOOGLE MAP -->
-<div id="map"></div>
 <!-- CONTACT ICONS -->
-<img src="images/pencil.png" class="contact_icon" width="30" height="30" alt="address" /> <span class="contact">Rehovot, Israel</span>
-<br/>
 <img src="images/telephone.png" class="contact_icon" width="30" height="30" alt="telephone" /> <span class="contact">972-54-8836191</span>
 <br/>
 <img src="images/email.png" class="contact_icon" width="30" height="30" alt="email" /> <span class="contact"><a href="mailto:333222@gmail.com" class="link" title="Email Me">333222@gmail.com</a></span>
 <br/>
 <img src="images/home.png" class="contact_icon" width="30" height="30" alt="home" /> <span class="contact"><a href="http://www.theosp.me/" class="link" title="My Website">theosp.me</a></span>
 <br/>
-<img src="images/vcard.png" class="contact_icon" width="30" height="30" alt="vcard" /> <span class="contact"><a href="/vcard/daniel-chcouri.vcf" class="link" title="Add Me To Your Contacts">vCard</a></span>
+<!--<img src="images/vcard.png" class="contact_icon" width="30" height="30" alt="vcard" /> <span class="contact"><a href="/vcard/daniel-chcouri.vcf" class="link" title="Add Me To Your Contacts">vCard</a></span>-->
 </div>
 </div>
 </div>
