--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ $('#slider').nivoSlider();
 </div>
 </div>
 <div class="content-right">
-<h4>My current project</h4>
+<h4>My current project - Head Developer Razoss</h4>
 <p>I currently work as the head web developer for an ambitious startup named <a href="http://www.razoss.com/" title="Razoss">Razoss</a> that aims to develop a new platform for services that runs above any modern web browser.</p>
 <p>My job is to implement a web application with great user experience that let users build custom bars that run above the Razoss framework. The main technologies I use for this project are: Python over the Google App Engine cloud, Javascript, jQuery, NodeJS, HTML5 and CSS3. (Read more on the Resume/CV section)<br/>
 </div>
@@ -108,7 +108,7 @@ $('#slider').nivoSlider();
 <div>
 <div class="figure">
 <h3>My Resume</h3>
-<div class="intro">Started at 2008, my professional career covers many fields: Advanced Web Applications, Cloud Services (Amazon/Google), Social APIs (Facebook, Twitter), Widgets development, Web sites development, LAMP servers installations and configurations (both VPSs and locale), and more...
+<div class="intro" style="margin-bottom: 13px;">Started at 2008, my professional career covers many fields: Advanced Web Applications, Cloud Services (Amazon/Google), Social APIs (Facebook, Twitter), Widgets development, Web sites development, LAMP servers installations and configurations (both VPSs and locale), and more...
     </div>
 <!-- TECHNICAL SKILLS PAGE STARTS -->
 <div class="coda-slider-wrapper">
@@ -127,18 +127,24 @@ $('#slider').nivoSlider();
 </div>
 
 <div class="skills_right_text">
-<span class="skill">Download My CV</span>
+<span class="skill">My CV and professional profiles</span>
 <div class="clear2"></div>
-<p>You can also browse my working experience online using the arrows to the left and right</p>
-<p><a href="/cv/daniel-chcouri.doc"><img src="images/doc.png" alt="doc" width="12" height="9" /> DOC (MS Office)</a>
+<p style="margin-bottom: 5px;">You can also browse my working experience online using the arrows to the left and right</p>
+<p style="margin-bottom: 5px; margin-left: 9px;"><a href="/cv/daniel-chcouri.doc"><img style="margin-right: 3px;" src="images/doc.png" alt="doc" width="12" height="9" /> DOC (MS Office)</a>
 <br/>
-<a href="/cv/daniel-chcouri.pdf"><img src="images/pdf.png" alt="pdf" width="12" height="9" /> PDF (Acrobat Reader)</a>
+<a href="/cv/daniel-chcouri.pdf"><img style="margin-right: 3px;" src="images/pdf.png" alt="pdf" width="12" height="9" /> PDF (Acrobat Reader)</a>
 <br />
-<a href="/cv/daniel-chcouri.odt"><img src="images/odt.png" alt="odt" width="12" height="9" /> ODT (Open Office)</a>
+<a href="/cv/daniel-chcouri.odt"><img style="margin-right: 3px;" src="images/odt.png" alt="odt" width="12" height="9" /> ODT (Open Office)</a>
 <br />
-<a href="http://www.linkedin.com/in/danielchcouri"><img src="images/linkedin.png" alt="linkedin" width="12" height="12" /> My Linkedin Profile</a></p>
+<a href="http://www.linkedin.com/in/danielchcouri" target="_blank"><img style="margin-right: 3px;" src="images/linkedin.png" alt="linkedin" width="12" height="12" /> My Linkedin Profile</a>
 <br />
-<i>last update: 2011-07-19</i>
+<a href="http://careers.stackoverflow.com/1" target="_blank"><img style="margin-right: 3px;" src="images/careers.png" alt="Careers Stackoverflow" width="12" height="12" /> Stackoverflow Careers 2.0</a>
+<br />
+<a href="http://stackoverflow.com/users/299920/theosp" target="_blank"><img style="margin-right: 3px;" src="images/stack.png" alt="Stackoveflow Profile" width="12" height="12" /> Stackoveflow Profile</a>
+<br />
+<a href="https://github.com/theosp" target="_blank"><img style="margin-right: 3px;" src="images/github_icon.png" alt="Github" width="12" height="12" /> GitHub Profile</a>
+</p>
+<i>last update: 2012-01-08</i>
 </div>
 </div>
 </div>
