--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ $('#slider').nivoSlider();
 <div>
 <div class="figure">
 <h3>My Resume</h3>
-<div class="intro" style="margin-bottom: 13px;">Started at 2008, my professional career covers many fields: Advanced Web Applications, Cloud Services (Amazon/Google), Social APIs (Facebook, Twitter), Widgets development, Web sites development, LAMP servers installations and configurations (both VPSs and locale), and more...
+<div class="intro" style="margin-bottom: 13px;">Started in 2008, my professional career covers various fields: Advanced Web Applications, Cloud Services (Amazon/Google), Social APIs (Facebook, Twitter), Widgets development, Web sites development, LAMP servers installations and configurations (both VPSs and locale), and more...
     </div>
 <!-- TECHNICAL SKILLS PAGE STARTS -->
 <div class="coda-slider-wrapper">
