--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ $('#slider').nivoSlider();
 </div>
 <div class="content-right">
 <h4>My current project - Head Developer Razoss</h4>
-<p>I currently work as the head web developer for an ambitious startup named <a href="http://www.razoss.com/" title="Razoss">Razoss</a> that aims to develop a new platform for services that runs above any modern web browser.</p>
+<p>I currently work as the head web developer for an ambitious startup named <a href="http://www.razoss.com/" title="Razoss" style="text-decoration: none; border-bottom: 1px dashed;">Razoss</a> that aims to develop a new platform for services that runs above any modern web browser.</p>
 <p>My job is to implement a web application with great user experience that let users build custom bars that run above the Razoss framework. The main technologies I use for this project are: Python over the Google App Engine cloud, Javascript, jQuery, NodeJS, HTML5 and CSS3. (Read more on the Resume/CV section)<br/>
 </div>
 </div>
