Add skype contact

--- a/index.html
+++ b/index.html
@@ -240,6 +240,8 @@ $('#slider').nivoSlider();
 <br/>
 <img src="images/email.png" class="contact_icon" width="30" height="30" alt="email" /> <span class="contact"><a href="mailto:333222@gmail.com" class="link" title="Email Me">333222@gmail.com</a></span>
 <br/>
+<img src="images/skype.png" class="contact_icon" width="30" height="30" alt="home" /> <span class="contact">daniel.razoss</span>
+<br/>
 <img src="images/home.png" class="contact_icon" width="30" height="30" alt="home" /> <span class="contact"><a href="http://www.theosp.me/" class="link" title="My Website">theosp.me</a></span>
 <br/>
 <!--<img src="images/vcard.png" class="contact_icon" width="30" height="30" alt="vcard" /> <span class="contact"><a href="/vcard/daniel-chcouri.vcf" class="link" title="Add Me To Your Contacts">vCard</a></span>-->
