--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ loading_text: "loading tweets..."
 <div>
 <div class="figure">
 <h3>Welcome</h3>
-<div class="intro">Hi, I'm Daniel. Computer programming is my core competency, my work and one of the things I most enjoy doing. In my work I strive to keep the delicate balance between stability and agility. I'm always eager to expand my horizons with new challenges and technologies.</div>
+<div class="intro">Hi, I'm Daniel. Computer programming is my core competency, my work and my main interest. In my work I strive to keep the delicate balance between stability and agility. I'm always eager to expand my horizons with new challenges and technologies.</div>
 <div class="content-left">
 <!-- SLIDER GALLERY - ADD YOUR PHOTOS HERE -->
 <div id="sliderbg">
