--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ $(this).stop().animate({ "opacity": 1 });
 });
 </script>
 
-<script type="text/javascript" src="js/unitpingfix.js">
+<script type="text/javascript" src="js/unitpngfix.js">
 </script>
 
 
