--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ $('#slider').nivoSlider();
 <br />
 <a href="https://github.com/theosp" target="_blank"><img style="margin-right: 3px;" src="images/github_icon.png" alt="Github" width="12" height="12" /> GitHub Profile</a>
 </p>
-<i>last update: 2012-01-08</i>
+<i>last update: 2012-07-05</i>
 </div>
 </div>
 </div>
@@ -174,9 +174,11 @@ $('#slider').nivoSlider();
 </div>
 <div class="skills_right_text">
 <h4>Main Achievements</h4>
-<img src="images/bullet.png" alt=""  width="12" height="9" /> Working in Google App Engine cloud<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Developing a low-cost scalable analytics system.<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Developing a secured users authentication system which isn't based on ssl (more details in my official CV).<br />
 <img src="images/bullet.png" alt=""  width="12" height="9" /> The servers-side code designed to handle simple AJAX APIs, leaving to the client as much as possible<br />
-<img src="images/bullet.png" alt=""  width="12" height="9" /> Widgets development<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Extensible toolbars generator<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Widgets development (jQuery, jQueryUI)<br />
 </div>
 </div>
 </div>
